<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <ImageView
        android:id="@+id/newProductImage"
        android:layout_width="275dp"
        android:layout_height="206dp"
        android:layout_marginStart="129dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="129dp"
        android:contentDescription="@string/add_photo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_add_a_photo_24" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="275dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/product_number"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newProductImage" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="276dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/product_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="276dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="151dp"
        android:layout_height="55dp"
        android:layout_marginTop="64dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPrice" />




</androidx.constraintlayout.widget.ConstraintLayout>