<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSizeActivity">

    <EditText
        android:id="@+id/productSizeName"
        android:layout_width="234dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/productSizeAmount"
        android:layout_width="234dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productSizeName" />

    <Button
        android:id="@+id/addNewSizeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/add_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productSizeAmount" />
</androidx.constraintlayout.widget.ConstraintLayout>