<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductActivity">

    <ImageView
        android:id="@+id/productSetPhoto"
        android:layout_width="275dp"
        android:layout_height="206dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/product_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_add_a_photo_24" />

    <TextView
        android:id="@+id/productSetName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="My Product Name"
        android:textColor="#000"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productSetPhoto" />

    <TextView
        android:id="@+id/productSetSpecial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="S5E7I4L"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productSetName" />

    <TextView
        android:id="@+id/productSetPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="2dp"
        android:text="2000"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="@+id/productSetSpecial"
        app:layout_constraintTop_toBottomOf="@+id/productSetSpecial" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/product_valute"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/productSetPrice"
        app:layout_constraintEnd_toEndOf="@+id/productSetSpecial"
        app:layout_constraintStart_toEndOf="@+id/productSetPrice" />

    <Button
        android:id="@+id/addSizeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/add_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productSetPrice" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerSizes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addSizeButton" />


</androidx.constraintlayout.widget.ConstraintLayout>